--- a/RL_Off_policy_methods.tex
+++ b/RL_Off_policy_methods.tex
@@ -112,7 +112,7 @@
 \begin{frame}[t]
 \frametitle{Common methods of PG learning}
 
-Unnormalized discounted state distribution: $\rho_\pi :=  \sum_{t=0}^\infty \gamma^t P(s_0 \rightarrow s_t)$ 
+Unnormalized discounted state distribution: $\rho_\pi :=  \sum_{t=0}^\infty \gamma^t P(s_0 \rightarrow s | t)$ 
 
 \begin{itemize}
 
@@ -126,7 +126,7 @@ Unnormalized discounted state distribution: $\rho_\pi :=  \sum_{t=0}^\infty \gam
 \begin{equation}
 \dfrac{P(traj)}{P'(traj)} = \dfrac{p(s_0) \pi_{\theta} (a_0 | s_0) p(s_1 | a_0, s_0)
 ...} {p(s_0) \pi_{\theta'} (a_0 | s_0) p(s_1 | a_0, s_0)
-...} = \prod_{t=0}^{T-1} \dfrac{\pi_\theta (a_t | s_t)} {\pi_{\theta'} (a_t | s_t)}
+...} = \prod_{t=0}^{T-1} \dfrac{\pi (a_t | s_t)} {\pi' (a_t | s_t)}
 \end{equation}
 
 \end{itemize}
@@ -148,7 +148,7 @@ Unnormalized discounted state distribution: $\rho_\pi :=  \sum_{t=0}^\infty \gam
 
 \begin{frame}[t]
 \frametitle{Q-prop}
-Variance reduction through action-dependent control variables\\
+Variance reduction through action-dependent control variates\\
  
 $\overline{f} (x,a) = f(x,\overline{a}) + \nabla_a f(x, a) (a - \overline{a})$
 
@@ -212,18 +212,30 @@ g(\theta) = E_{\rho_\pi, \pi} \left[ \nabla_\theta log \pi(a_t | s_t) \overline{
 \begin{frame}[t]
 \frametitle{Variance analysis}
 Our final gradient estimator:
-\begin{multline}
+\begin{multline*}
 \nabla_{\theta} J = E_{\rho_\pi, \pi} \left[ \nabla_{\theta} log \pi_\theta ( a_t | s_t) (A(s_t, a_t) - \eta(s_t) \overline{A_w} (s_t,a_t)) \right] + \\ + E_{\rho_\pi} \left[ \eta(s_t) \nabla_a Q_w(s_t, a) |_{a=\mu_\theta(s_t)} 
 \nabla_\theta \mu_\theta(s_t)
 \right]
-\end{multline}
-Authors analyze $Var^* = E_{\rho_\pi} \left[ Var_{a_t}(A(s_t,a_t) - \eta(s_t) \overline{A_w} (s_t,a_t) )\right]$
-\\ $=Var + E_{\rho_\pi} \left[ \eta(s_t) Cov_{a_t} (A(s_t, a_t), \overline{A}(s_t, a_t)) + \eta^2(s_t) Var(\overline{A}(s_t, a_t)) \right]$;
-\\ $Cov_{a_t} (A(s_t, a_t), \overline{A}(s_t, a_t)) = E_\pi (A(s_t,a_t) \overline{A}(s_t, a_t))$
-\\ $Var_{a_t} (\overline{A}(s_t, a_t)) = E_\pi (\overline{A}^2(s_t, a_t))$
-\\ $= \nabla_a Q_w(s_t, a) |_{a=\mu_\theta(s_t)}^T \Sigma_\theta(s_t) \nabla_a Q_w(s_t, a) |_{a=\mu_\theta(s_t)}$
-\\ where $\Sigma_\theta(s_t)$ is a covariance matrix of stochastic policy $\pi_\theta$ at state $s_t$
-\\ Therefore, optimal $\eta^*(s_t) = Cov(A,\overline{A})/Var(\overline{A})$ can be computed easily: $Cov$ can be estimated with single sample and $Var$ is analytic
+\end{multline*}
+Authors analyze 
+
+\begin{equation*}
+\begin{aligned}
+Var^* &= E_{\rho_\pi} \left[ Var_{a_t}(A(s_t,a_t) - \eta(s_t) \overline{A_w} (s_t,a_t) )\right]&&\\
+      &= Var + E_{\rho_\pi} \left[ \eta(s_t) Cov_{a_t} (A(s_t, a_t), \overline{A}(s_t, a_t)) + \eta^2(s_t) Var(\overline{A}(s_t, a_t)) \right]&&\\
+\end{aligned}
+\end{equation*}
+
+\begin{equation*}
+\begin{aligned}
+ Cov_{a_t} (A(s_t, a_t), \overline{A}(s_t, a_t)) &= E_\pi (A(s_t,a_t) \overline{A}(s_t, a_t))&&\\
+ Var_{a_t} (\overline{A}(s_t, a_t)) &= E_\pi (\overline{A}^2(s_t, a_t))&&\\
+ &= \nabla_a Q_w(s_t, a) |_{a=\mu_\theta(s_t)}^T \Sigma_\theta(s_t) \nabla_a Q_w(s_t, a) |_{a=\mu_\theta(s_t)}&&\\
+\end{aligned}
+\end{equation*}
+
+where $\Sigma_\theta(s_t)$ is a covariance matrix of stochastic policy $\pi_\theta$ at state $s_t$
+\\ Therefore, optimal $\eta^*(s_t) = Cov(A,\overline{A})/Var(\overline{A})$ can be approximated with single sample
 
 
 \end{frame}
@@ -244,6 +256,45 @@ $\eta(s_t) = sgn(Cov)$
 
 \end{itemize}
 
+\end{frame}
+
+\subsection{Value function estimation}
+\begin{frame}[t]
+\frametitle{Value function estimation}
+Q-function estimation for control variate:\\
+
+$T_\pi[Q](s,a) := r(s,a) + E_\pi[Q(s',a') | s,a]$\\
+
+$w \leftarrow argmin_w (T_\pi[Q_{w'}] - Q_w)^2$\\
+$ w' \leftarrow \tau w' + (1-\tau) w, \tau = 0.999$
+
+\vspace{3mm}
+
+Value function estimation:\\
+$\phi \leftarrow argmin \left[ V_\phi(s) - (r + V_\phi(s')) \right]^2$;\\
+$(s,s') \sim MDP_\pi$
+
+\vspace{3mm}
+
+Continuous control of bias-variance tradeoff (GAE($\lambda$)):\\
+$Q^\lambda (s_t,a_t) = (1-\lambda) \sum_{k=0}^{\infty} \lambda^k \left[ \sum_{m=0}^{k-1} \gamma^m r(s_{t+m}, a_{t+m}) + \gamma^{k} V_\phi  (s_{t+k}, a_{t+k}) \right]$
+
+\vspace{1.5mm}
+
+$\lambda \rightarrow 1 \Rightarrow Q^\lambda \rightarrow R$\\
+$\lambda \rightarrow 0 \Rightarrow Q^\lambda \rightarrow V_\phi$\\
+
+
+\end{frame}
+
+\subsection{Empirical Results}
+\begin{frame}[t]
+\includegraphics[scale=0.23]{q-prop1}
+\includegraphics[scale=0.23]{q-prop2}
+\end{frame}
+
+\begin{frame}
+\includegraphics[scale=0.21]{q-prop3}
 \end{frame}
 
 \end{document}
